--- a/Rapport/1Chapters/Implementation/Compressor.tex
+++ b/Rapport/1Chapters/Implementation/Compressor.tex
@@ -116,13 +116,14 @@ A pole is located at -0.2 and the cutoff frequency can be calculated as $f = \fr
 
 \begin{figure}[H]
 \centering
-\begin{subfigure}[t]{0.7\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{releaseTimeAnalogFreq}
 	\input{figures/releaseTimeAnalogFreq.tex}
 	\caption{Frequency response.}
 	\label{fig:releaseTimeAnalogFreq}
 \end{subfigure}
-\begin{subfigure}[t]{0.7\textwidth}
+\hfill
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{releaseTimeAnalogStep}
 	\input{figures/releaseTimeAnalogStep.tex}
 	\caption{Step response.}
@@ -140,13 +141,14 @@ The Sampling period, T, varies as it depends on which octave band it is implemen
 
 \begin{figure}[H]
 \centering
-\begin{subfigure}[t]{0.7\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{releaseTimeDigitalFreq}
 	\input{figures/releaseTimeDigitalFreq.tex}
 	\caption{Frequency response.}
 	\label{fig:releaseTimeDigitalFreq}
 \end{subfigure}
-\begin{subfigure}[t]{0.7\textwidth}
+\hfill
+\begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{releaseTimeDigitalStep}
 	\input{figures/releaseTimeDigitalStep.tex}
 	\caption{Step response.}
