--- a/Rapport/1Chapters/Implementation/mainCode.tex
+++ b/Rapport/1Chapters/Implementation/mainCode.tex
@@ -1,4 +1,4 @@
-\chapter{Main program implementation}
+\chapter{Main program implementation}\label{cha:mainprogram}
 The implementation is done using a main program which controls scheduling of the program while assembler functions are called to run critical algorithms. Therefore this chapter will go through the schedueling of the code, the different functions implemented, and how they are called in C to Assembler to get an overview of the implemented program. There are four function which can be called from the main program:
 \begin{itemize}
 \item downFunc, which is a decimation block showed in figure \textbf{XX}.
