--- a/Rapport/2Appendix/AcceptanceTEST.tex
+++ b/Rapport/2Appendix/AcceptanceTEST.tex
@@ -161,7 +161,7 @@ The signals can be analyzed directly from the raw data. It shows, compared with 
 	\centering
 	\tikzsetnextfilename{FFTAccept}
 	\input{figures/FFTFAccept.tex}
-	\caption{Caption }
+	\caption{An FFT of the signal recorded by the accelerometer.}
 	\label{fig:FFTAcceptTest}
 \end{figure}
 
