--- a/Rapport/2Appendix/dspSetup.tex
+++ b/Rapport/2Appendix/dspSetup.tex
@@ -1,6 +1,6 @@
 \chapter{DSP setup} \label{app:DSPSetup}
 
-The initialization is performed in a function called system\_init, which is shown in \autoref{listingSystemInit}. The first two lines of the function is the setup of the clock. SYS\_PCGCR1 and SYS\_PCGCR2 are defined as IO-ports to the registers namely 0x1c02 and 0x1c03. By setting SYS\_PCGCR1 and SYS\_PCGCR2 (Peripheral Clock Gating Configuration Registers) to 0 the clock is activated on all peripherals needing a clock. The next line SYS\_EXBUSSEL, which has the IO register address 0x1c00, is the external bus selector. The register determine which of the external peripheral IO unit is selected. By setting the register to 0x1100, SPI, GPIO, UART, I2S2 and I2S0 and, are activated. The system only uses the I2S0 and UART ports. The I$^2$C is afterwards initialized. The I$^2$C bus is used for communication between the TMS320C5515 and TLV320AIC3204.
+The initialization is performed in the function system\_init(), which is shown in \autoref{listingSystemInit}. The first two lines of the function is the setup of the clock. SYS\_PCGCR1 and SYS\_PCGCR2 are defined as IO-ports to the registers namely 0x1c02 and 0x1c03. By setting SYS\_PCGCR1 and SYS\_PCGCR2 (Peripheral Clock Gating Configuration Registers) to 0 the clock is activated on all peripherals. The next line SYS\_EXBUSSEL, which has the IO register address 0x1c00, is the external bus selector. The register determine which of the external peripheral IO units are selected. By setting the register to 0x1100, SPI, GPIO, UART, I2S2 and I2S0 are activated. The system only uses the I2S0 and UART ports. The I$^2$C is afterwards initialized. The I$^2$C bus is used for communication between the TMS320C5515 and TLV320AIC3204.
 
 \begin{lstlisting}[language=C, caption = {System initialization},label={listingSystemInit}]
 void system_init(uint8 audioType, uint8 resolution, uint8 fs){
@@ -56,7 +56,7 @@ The function TLV320AIC3204\_set() is used to write to the audio codec through th
 
 \section{UART setup} \label{UART_setup}
 
-A library named "uart.h" which handles the initialization and debug functionalities. The full code for "uart.c" is seen in \autoref{listingUartInit}. In order to use the UART module in the TMS320C5515 the SYS\_EXBUSSEL is set to 0x1100. 
+A library named "uart.h" which handles the initialization and communication debug functionalities is made. The full code for "uart.c" is seen in \autoref{listingUartInit}. In order to use the UART module in the TMS320C5515 the SYS\_EXBUSSEL is set to 0x1100. 
 
 \begin{lstlisting}[language=C, caption = {Initialization of UART},label={listingUartInit}]
 // By 16gr640, Spring 2016, AAU
